--- a/week6/templates/home.html
+++ b/week6/templates/home.html
@@ -7,43 +7,36 @@
         url_for('static',filename='css/main.css')}}">
 </head>
 <body>
-    <div class="welcome">歡迎光臨，請輸入帳號密碼</div>
+    <div class="welcome">歡迎光臨，請註冊登入系統</div>
     <br>
-    <h1>登入系統</h1>
-    <form action="/signin" method="POST" class="form">
+    <h1>註冊帳號</h1>
+    <form action="/signup" method="POST" class="form" onsubmit="return validateForm(this);">
+        姓名 <input type="text" name="name" /><br>
         帳號 <input type="text" name="username"/><br>
         密碼 <input type="text" name="password"/><br>
-        同意條款 <input id="checkbox" type="checkbox" name="checkbox"/><br>
         <br>
-        <button id="button">登入</button>
+        <button type="submit" id="signupButton">註冊</button>
     </form>
     <hr/>
-    <h1>計算正整數的平方</h1>
-    正整數 <input type="text" id="numberInput"/><br>
-    <button id="submit">計算</button>
-
+    <h1>登入系統</h1>
+    <form action="/signin" method="POST" class="form" onsubmit="return validateForm(this);">
+        帳號 <input type="text" name="username"/><br>
+        密碼 <input type="text" name="password"/><br>
+        <br>
+        <button type="submit" id="signinButton">登入</button>
+    </form>
 </body>
 <script>
-    //checkbox
-    let button=document.getElementById("button");
-    let checkbox=document.getElementById("checkbox");
-    button.addEventListener("click",function(event){
-    if(!checkbox.checked){
-        event.preventDefault();
-        alert("Please check the checkbox first")
-    }     
-    });
-    // 正整數平方
-    let submit=document.getElementById("submit");
-    submit.addEventListener("click",function(){
-        let number=document.getElementById("numberInput").value;
-        // if(isNaN(number)||number<=0){
-        //     alert("Please enter a positive number")
-        if(!Number.isInteger(parseFloat(number)) || parseFloat(number) <= 0){
-            alert("Please enter a positive number")
-        }else{
-            window.location.href="/square/"+number;
+
+function validateForm(form){
+    let inputs=form.getElementsByTagName("input");
+    for (let i=0; i<inputs.length; i++){
+        if(inputs[i].value.trim() === ""){
+            alert("請輸入完整資料！");
+            return false;
         }
-    });
+    }
+    return true;
+}
 </script>
 </html>
