--- a/week6/templates/success.html
+++ b/week6/templates/success.html
@@ -5,10 +5,56 @@
     <title>登入成功</title>
     <link rel="stylesheet" href="{{
         url_for('static',filename='css/main.css')}}">
+    <style>
+        .message {
+            font-size: 20px;
+            margin: 10px;
+        }
+        .container {
+            display: flex;
+            align-items: center; /* 垂直居中 */
+            justify-content: center;
+            font-size: 20px;
+            margin: 10px;
+        }
+        .deleteMessageButton{
+            margin: 10px;
+        }
+    </style>
 </head>
 <body>
     <div class="welcome">歡迎光臨，這是會員頁</div><br>
-    <h1>恭喜您，成功登入系統</h1>
+    <h1>{{ name }}，成功登入系統</h1>
     <a href="/signout">登出系統</a>
+    <br>
+    <br>
+    <hr/>
+    <h1>快來留言吧</h1>
+    <form action="/createMessage" method="POST" class="form">
+        內容 <input type="text" name="message" /><br>
+        <button type="submit" id="messageButton">送出</button>
+    </form>
+    <br/>
+    <hr/>
+    <br/>
+    
+    {% for msg in message %}
+        {% set parts = msg.split(':') %} 
+        {% set sender = parts[0] %}
+        {% set content = parts[1] %}
+        {% set message_id = parts[2] %}
+        {% if name == sender %}
+            <form action="/deleteMessage" method="POST" class="form">
+                <div class="container">
+                    <nobr>{{ sender }}: {{ content }}</nobr>
+                    <input type="hidden" name="message_id" value="{{ message_id }}">
+                    <button type="submit" id="deleteMessageButton" class="deleteMessageButton">X</button>
+                </div>
+            </form>
+        {% else %}
+            <p class="message">{{ sender }}: {{ content }}</p>
+        {% endif %}
+    {% endfor %}
+    
 </body>
 </html>
