--- a/week6/static/main.css
+++ b/week6/static/main.css
@@ -15,3 +15,19 @@ input{
 .form{
     font-size: 20px;
 }
+
+/* message */
+.message {
+    font-size: 20px;
+    margin: 10px;
+}
+.container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+    margin: 10px;
+}
+.deleteMessageButton{
+    margin: 10px;
+} 
