--- a/week6/templates/error.html
+++ b/week6/templates/error.html
@@ -3,8 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>登入失敗</title>
-    <link rel="stylesheet" href="{{
-        url_for('static',filename='css/main.css')}}">
+    <link rel="stylesheet" href="../static/main.css">
 </head>
 <body>
     <div class="welcome">失敗頁面</div><br>
