--- a/week6/templates/home.html
+++ b/week6/templates/home.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="utf-8">
     <title>首頁-登入畫面</title>
-    <link rel="stylesheet" href="{{
-        url_for('static',filename='css/main.css')}}">
+    <link rel="stylesheet" href="../static/main.css">
+    <script src="../static/scripts.js"></script>
 </head>
 <body>
     <div class="welcome">歡迎光臨，請註冊登入系統</div>
@@ -26,17 +26,4 @@
         <button type="submit" id="signinButton">登入</button>
     </form>
 </body>
-<script>
-
-function validateForm(form){
-    let inputs=form.getElementsByTagName("input");
-    for (let i=0; i<inputs.length; i++){
-        if(inputs[i].value.trim() === ""){
-            alert("請輸入完整資料！");
-            return false;
-        }
-    }
-    return true;
-}
-</script>
 </html>
