--- a/week6/templates/success.html
+++ b/week6/templates/success.html
@@ -3,24 +3,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>登入成功</title>
-    <link rel="stylesheet" href="{{
-        url_for('static',filename='css/main.css')}}">
-    <style>
-        .message {
-            font-size: 20px;
-            margin: 10px;
-        }
-        .container {
-            display: flex;
-            align-items: center; /* 垂直居中 */
-            justify-content: center;
-            font-size: 20px;
-            margin: 10px;
-        }
-        .deleteMessageButton{
-            margin: 10px;
-        }
-    </style>
+    <link rel="stylesheet" href="../static/main.css">
+    <script src="../static/scripts.js"></script>
 </head>
 <body>
     <div class="welcome">歡迎光臨，這是會員頁</div><br>
@@ -38,31 +22,21 @@
     <hr/>
     <br/>
     
-    {% for msg in message %}
-        {% set parts = msg.split(':') %} 
-        {% set sender = parts[0] %}
-        {% set content = parts[1] %}
-        {% set message_id = parts[2] %}
+    {% for message in messages %}
+        {% set sender = message['name'] %}
+        {% set content = message['content'] %}
+        {% set message_id = message['id'] %}
         {% if name == sender %}
             <form action="/deleteMessage" method="POST" class="form">
                 <div class="container">
                     <nobr>{{ sender }}: {{ content }}</nobr>
                     <input type="hidden" name="message_id" value="{{ message_id }}">
-                    <button type="submit" id="deleteMessageButton" class="deleteMessageButton" onclick="confirmDelete('{{ message_id }}')">X</button>
+                    <button type="button" id="deleteMessageButton" class="deleteMessageButton" onclick="confirmDelete(this.form,'{{ message_id }}')">X</button>
                 </div>
             </form>
         {% else %}
             <p class="message">{{ sender }}: {{ content }}</p>
         {% endif %}
     {% endfor %}
-    
 </body>
-<script>
-    function confirmDelete(messageId){
-        if(!confirm("確定要刪除這則訊息嗎？")){
-            return false;
-        }
-        this.form.submit();
-    }
-</script>
 </html>
